--- a/notebooks/day23.ipynb
+++ b/notebooks/day23.ipynb
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "c7840d3d",
    "metadata": {},
    "outputs": [
@@ -224,65 +224,11 @@
      "text": [
       "0\n",
       "1 0\n",
-      "50000\n",
-      "43768 2523\n",
-      "100000\n",
-      "71603 3993\n",
-      "150000\n",
-      "96195 13858\n",
-      "200000\n",
-      "132798 13198\n",
-      "250000\n",
-      "159210 9501\n",
-      "13586\n",
+      "13562\n",
       "13546\n",
       "13526\n",
-      "13524\n",
-      "13520\n",
-      "300000\n",
-      "155969 13738\n",
-      "350000\n",
-      "149936 13737\n",
-      "400000\n",
-      "144996 13391\n",
-      "450000\n",
-      "136136 13767\n",
-      "500000\n",
-      "129432 13200\n",
-      "550000\n",
-      "119995 13980\n",
-      "600000\n",
-      "113202 13791\n",
-      "650000\n",
-      "103718 14356\n",
-      "700000\n",
-      "97769 12612\n",
-      "750000\n",
-      "91274 13783\n",
-      "800000\n",
-      "81279 13416\n",
-      "850000\n",
-      "73176 13722\n",
-      "900000\n",
-      "63463 14316\n",
-      "950000\n",
-      "56402 13088\n",
-      "1000000\n",
-      "50363 13742\n",
-      "1050000\n",
-      "45668 13920\n",
-      "1100000\n",
-      "41069 13593\n",
-      "1150000\n",
-      "35515 13721\n",
-      "1200000\n",
-      "29048 13120\n",
-      "1250000\n",
-      "18555 13086\n",
-      "1300000\n",
-      "10440 14130\n",
-      "1350000\n",
-      "2780 13213\n"
+      "13522\n",
+      "13520\n"
      ]
     }
    ],
@@ -293,15 +239,21 @@
     "to_check = deque([(p,energy, total_steps)])\n",
     "min_energy = 0\n",
     "counter = 0\n",
+    "visited = {}\n",
     "\n",
     "while to_check:\n",
     "    if counter % 50000 == 0:\n",
     "        print(counter)\n",
     "        print(len(to_check), energy)\n",
     "    counter += 1\n",
-    "    #to_check.sort(key=lambda x: x[1])\n",
+    "    \n",
     "    p, energy,total_steps = to_check.popleft()\n",
-    "    #print(len(to_check))\n",
+    "    \n",
+    "    if tuple(p) in visited:\n",
+    "        if visited[tuple(p)] <= energy:\n",
+    "            continue\n",
+    "    visited[tuple(p)] = energy\n",
+    "\n",
     "    if check_end(p):\n",
     "        if min_energy == 0:\n",
     "            min_energy = energy\n",
@@ -314,8 +266,7 @@
     "        continue\n",
     "    if  energy + proyected_energy(p) > min_energy+1000 and min_energy != 0:\n",
     "        continue\n",
-    "    if total_steps > 60:\n",
-    "        continue\n",
+    "\n",
     "    condidates_to_move = []\n",
     "    homed = False\n",
     "    for i in range(8):\n",
@@ -365,24 +316,6 @@
     "            condidates_to_move.append(i)\n",
     "            continue\n",
     "\n",
-    "            for pos in hallways:\n",
-    "                steps = bfs(animal_pos, pos)\n",
-    "                candidates = []\n",
-    "                if steps != -1:\n",
-    "                    new_p = p.copy()\n",
-    "                    new_p[i] = pos\n",
-    "                    if i in [0,1]:\n",
-    "                        new_energy = energy+steps*1\n",
-    "                    elif i in [2,3]:\n",
-    "                        new_energy = energy+steps*10\n",
-    "                    elif i in [4,5]:\n",
-    "                        new_energy = energy+steps*100\n",
-    "                    elif i in [6,7]:\n",
-    "                        new_energy = energy+steps*1000\n",
-    "                    to_check.append((new_p, new_energy, total_steps+steps))\n",
-    "                    #candidates.sort(key=lambda x: x[1])\n",
-    "                    #for new_p, new_energy in candidates: \n",
-    "                    #    to_check.append((new_p, new_energy))\n",
     "        \n",
     "        elif animal_pos[1] == 1:\n",
     "            if i in [0,1]:\n",
@@ -472,17 +405,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "63849e44",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "13526"
+       "13520"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,7 +427,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "red-electrica",
    "language": "python",
    "name": "python3"
   },
@@ -508,11 +441,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9 (tags/v3.10.9:1dd9be6, Dec  6 2022, 20:01:21) [MSC v.1934 64 bit (AMD64)]"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
-    "hash": "8db983136147b7bdb2ff82c19168c2e2e47fac4f5ec69581c5919ea65915f153"
+    "hash": "480b375f1043213f5c1f0363a14182342a678e76bb2ef498debd342d6015283c"
    }
   }
  },
