--- a/notebooks/day23_part2.ipynb
+++ b/notebooks/day23_part2.ipynb
@@ -26,10 +26,10 @@
       "text/plain": [
        "[['#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#'],\n",
        " ['#', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '#'],\n",
-       " ['#', '#', '#', 'B', '#', 'C', '#', 'B', '#', 'D', '#', '#', '#'],\n",
+       " ['#', '#', '#', 'C', '#', 'B', '#', 'D', '#', 'A', '#', '#', '#'],\n",
        " ['#', '#', '#', 'D', '#', 'C', '#', 'B', '#', 'A', '#'],\n",
        " ['#', '#', '#', 'D', '#', 'B', '#', 'A', '#', 'C', '#'],\n",
-       " ['#', '#', '#', 'A', '#', 'D', '#', 'C', '#', 'A', '#'],\n",
+       " ['#', '#', '#', 'B', '#', 'D', '#', 'A', '#', 'C', '#'],\n",
        " ['#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#']]"
       ]
      },
@@ -39,7 +39,7 @@
     }
    ],
    "source": [
-    "f = open(\"../data/test_day23_2.txt\", \"r\")\n",
+    "f = open(\"../data/data_day23_2.txt\", \"r\")\n",
     "data = list(f)\n",
     "data = [list(line.strip()) for line in data]\n",
     "data"
@@ -57,7 +57,7 @@
      "text": [
       "{(3, 4), (3, 1), (5, 4), (5, 1), (9, 2), (9, 5), (7, 4), (7, 1), (3, 3), (5, 3), (9, 1), (9, 4), (11, 1), (2, 1), (6, 1), (7, 3), (3, 2), (4, 1), (3, 5), (5, 2), (5, 5), (9, 3), (8, 1), (1, 1), (10, 1), (7, 2), (7, 5)}\n",
       "{(11, 1), (2, 1), (8, 1), (6, 1), (1, 1), (10, 1), (4, 1)}\n",
-      "[(9, 3), (7, 4), (3, 5), (9, 5), (3, 2), (7, 2), (7, 3), (5, 4), (5, 2), (5, 3), (9, 4), (7, 5), (9, 2), (3, 3), (3, 4), (5, 5)]\n"
+      "[(9, 2), (9, 3), (7, 4), (7, 5), (5, 2), (7, 3), (5, 4), (3, 5), (3, 2), (5, 3), (9, 4), (9, 5), (7, 2), (3, 3), (3, 4), (5, 5)]\n"
      ]
     }
    ],
@@ -182,27 +182,62 @@
     "\n",
     "def proyected_energy(p): # maybe room[-1] is not the optimum\n",
     "    energy = 0\n",
-    "    for i in range(8):\n",
+    "    steps = 0\n",
+    "    for i in range(16):\n",
     "        if i in [0,1,2,3]:\n",
     "            if p[i] in roomA:\n",
     "                continue\n",
     "            else:\n",
-    "                energy += bfs2(p[i], roomA[-1])*1\t\n",
+    "                temp = bfs2(p[i], roomA[1])\n",
+    "                steps += temp\n",
+    "                energy += temp*1\t\n",
     "        if i in [4,5,6,7]:\n",
     "            if p[i] in roomB:\n",
     "                continue\n",
     "            else:\n",
-    "                energy += bfs2(p[i], roomB[-1])*10\n",
+    "                temp = bfs2(p[i], roomB[1])\n",
+    "                steps += temp\n",
+    "                energy += temp*10\n",
     "        if i in [8,9,10,11]:\n",
     "            if p[i] in roomC:\n",
     "                continue\n",
     "            else:\n",
-    "                energy += bfs2(p[i], roomC[-1])*100\n",
+    "                temp = bfs2(p[i], roomC[1])\n",
+    "                steps += temp\n",
+    "                energy += temp*100\n",
     "        if i in [12,13,14,15]:\n",
     "            if p[i] in roomD:\n",
     "                continue\n",
     "            else:\n",
-    "                energy += bfs2(p[i], roomD[-1])*1000\n",
+    "                temp = bfs2(p[i], roomD[1])\n",
+    "                steps += temp\n",
+    "                energy += temp*1000\n",
+    "    return steps, energy\n",
+    "\n",
+    "def proyected_energy2(p):\n",
+    "    energy = 0\n",
+    "    for i in range(16):\n",
+    "        if i in [0,1,2,3]:\n",
+    "            if p[i] in roomA:\n",
+    "                continue\n",
+    "            else:\n",
+    "                energy += abs(p[i][0]-roomA[0][0])+p[i][1]\n",
+    "                \n",
+    "        if i in [4,5,6,7]:\n",
+    "            if p[i] in roomB:\n",
+    "                continue\n",
+    "            else:\n",
+    "                energy += (abs(p[i][0]-roomB[0][0])+p[i][1])*10\n",
+    "        if i in [8,9,10,11]:\n",
+    "            if p[i] in roomC:\n",
+    "                continue\n",
+    "            else:\n",
+    "                energy += (abs(p[i][0]-roomC[0][0])+p[i][1])*100\n",
+    "        if i in [12,13,14,15]:\n",
+    "            if p[i] in roomD:\n",
+    "                continue\n",
+    "            else:\n",
+    "                energy += (abs(p[i][0]-roomD[0][0])+p[i][1])*1000\n",
     "    return energy\n"
    ]
   },
@@ -217,27 +252,37 @@
      "output_type": "stream",
      "text": [
       "0\n",
-      "1 0\n",
+      "0 0 0\n",
+      "25000\n",
+      "64187 8270 17\n",
       "50000\n",
-      "567241 204\n",
+      "86783 6834 30\n",
+      "75000\n",
+      "102691 7470 27\n",
       "100000\n",
-      "1095332 200\n",
+      "117206 8332 34\n",
+      "125000\n",
+      "111071 6943 31\n",
       "150000\n",
-      "1626329 250\n",
+      "104249 10074 30\n",
+      "175000\n",
+      "102344 7710 33\n",
       "200000\n",
-      "2179183 280\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\jpavila\\OneDrive - ARQUIMEA GROUP\\Documentos\\git\\advent-of-code-2021\\notebooks\\day23_part2.ipynb Cell 6\u001b[0m in \u001b[0;36m<cell line: 8>\u001b[1;34m()\u001b[0m\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/jpavila/OneDrive%20-%20ARQUIMEA%20GROUP/Documentos/git/advent-of-code-2021/notebooks/day23_part2.ipynb#W5sZmlsZQ%3D%3D?line=123'>124</a>\u001b[0m animal_pos \u001b[39m=\u001b[39m p[i]\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/jpavila/OneDrive%20-%20ARQUIMEA%20GROUP/Documentos/git/advent-of-code-2021/notebooks/day23_part2.ipynb#W5sZmlsZQ%3D%3D?line=124'>125</a>\u001b[0m \u001b[39mfor\u001b[39;00m pos \u001b[39min\u001b[39;00m hallways:\n\u001b[1;32m--> <a href='vscode-notebook-cell:/c%3A/Users/jpavila/OneDrive%20-%20ARQUIMEA%20GROUP/Documentos/git/advent-of-code-2021/notebooks/day23_part2.ipynb#W5sZmlsZQ%3D%3D?line=125'>126</a>\u001b[0m     steps \u001b[39m=\u001b[39m bfs(animal_pos, pos)\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/jpavila/OneDrive%20-%20ARQUIMEA%20GROUP/Documentos/git/advent-of-code-2021/notebooks/day23_part2.ipynb#W5sZmlsZQ%3D%3D?line=126'>127</a>\u001b[0m     candidates \u001b[39m=\u001b[39m []\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/jpavila/OneDrive%20-%20ARQUIMEA%20GROUP/Documentos/git/advent-of-code-2021/notebooks/day23_part2.ipynb#W5sZmlsZQ%3D%3D?line=127'>128</a>\u001b[0m     \u001b[39mif\u001b[39;00m steps \u001b[39m!=\u001b[39m \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m:\n",
-      "\u001b[1;32mc:\\Users\\jpavila\\OneDrive - ARQUIMEA GROUP\\Documentos\\git\\advent-of-code-2021\\notebooks\\day23_part2.ipynb Cell 6\u001b[0m in \u001b[0;36mbfs\u001b[1;34m(start, end)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/jpavila/OneDrive%20-%20ARQUIMEA%20GROUP/Documentos/git/advent-of-code-2021/notebooks/day23_part2.ipynb#W5sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m steps\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/jpavila/OneDrive%20-%20ARQUIMEA%20GROUP/Documentos/git/advent-of-code-2021/notebooks/day23_part2.ipynb#W5sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39mfor\u001b[39;00m d \u001b[39min\u001b[39;00m [(\u001b[39m0\u001b[39m,\u001b[39m1\u001b[39m),(\u001b[39m0\u001b[39m,\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m),(\u001b[39m1\u001b[39m,\u001b[39m0\u001b[39m),(\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m,\u001b[39m0\u001b[39m)]:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/jpavila/OneDrive%20-%20ARQUIMEA%20GROUP/Documentos/git/advent-of-code-2021/notebooks/day23_part2.ipynb#W5sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m     new_pos \u001b[39m=\u001b[39m (pos[\u001b[39m0\u001b[39m]\u001b[39m+\u001b[39md[\u001b[39m0\u001b[39;49m], pos[\u001b[39m1\u001b[39m]\u001b[39m+\u001b[39md[\u001b[39m1\u001b[39m])\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/jpavila/OneDrive%20-%20ARQUIMEA%20GROUP/Documentos/git/advent-of-code-2021/notebooks/day23_part2.ipynb#W5sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m     \u001b[39mif\u001b[39;00m new_pos \u001b[39min\u001b[39;00m maze \u001b[39mand\u001b[39;00m new_pos \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m visited:\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/jpavila/OneDrive%20-%20ARQUIMEA%20GROUP/Documentos/git/advent-of-code-2021/notebooks/day23_part2.ipynb#W5sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m         \u001b[39mif\u001b[39;00m new_pos \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m p:\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "95396 9367 25\n",
+      "225000\n",
+      "85742 7416 27\n",
+      "250000\n",
+      "65273 7968 39\n",
+      "275000\n",
+      "51538 7991 35\n",
+      "300000\n",
+      "32513 6353 35\n",
+      "325000\n",
+      "18138 10944 54\n",
+      "350000\n",
+      "6466 11922 60\n",
+      "48908 182\n",
+      "48708 180\n"
      ]
     }
    ],
@@ -247,75 +292,57 @@
     "total_steps = 0\n",
     "to_check = deque([(p,energy, total_steps)])\n",
     "min_energy = 0\n",
+    "min_steps = 0\n",
     "counter = 0\n",
-    "\n",
+    "ma,me = 0, 100000\n",
+    "visited = {}\n",
     "while to_check:\n",
-    "    if counter % 50000 == 0:\n",
-    "        print(counter)\n",
-    "        print(len(to_check), energy)\n",
-    "    counter += 1\n",
-    "    #to_check.sort(key=lambda x: x[1])\n",
+    "    \n",
     "    p, energy,total_steps = to_check.popleft()\n",
-    "    #print(len(to_check))\n",
+    "    \n",
+    "    #pro_steps = proyected_steps(p)\n",
+    "    #if total_steps + pro_steps> ma:\n",
+    "    #    ma = total_steps + pro_steps\n",
+    "    #elif total_steps + pro_steps < me:\n",
+    "    #    me = total_steps + pro_steps\n",
+    "\n",
+    "    if counter % 25000 == 0:\n",
+    "        print(counter)\n",
+    "        print(len(to_check), energy, total_steps)\n",
+    "    counter += 1\n",
+    "\n",
+    "    if tuple(p) in visited:\n",
+    "        if visited[tuple(p)] <= energy:\n",
+    "            continue\n",
+    "        else:\n",
+    "            visited[tuple(p)] = energy\n",
+    "    else:\n",
+    "        visited[tuple(p)] = energy\n",
+    "    \n",
+    "\n",
     "    if check_end(p):\n",
     "        if min_energy == 0:\n",
     "            min_energy = energy\n",
-    "            print(min_energy)\n",
+    "            min_steps = total_steps\n",
+    "            print(min_energy, min_steps)\n",
     "        else:\n",
     "            if energy < min_energy:\n",
     "                min_energy = energy\n",
-    "                print(min_energy)\n",
+    "                min_steps = total_steps\n",
+    "                print(min_energy, min_steps)\n",
     "        continue\n",
-    "    if  energy + proyected_energy(p) > 50000:\n",
+    "    \n",
+    "    pro_ener = proyected_energy2(p)\n",
+    "    if  energy + pro_ener > 50000:\n",
     "        continue\n",
-    "    if  energy + proyected_energy(p) > min_energy+1000 and min_energy != 0:\n",
+    "    if  energy + pro_ener > min_energy+1000 and min_energy != 0:\n",
     "        continue\n",
-    "    #if total_steps > 60:\n",
-    "    #    continue\n",
     "\n",
     "    condidates_to_move = []\n",
     "    homed = False\n",
-    "    for i in range(8):\n",
+    "    for i in range(16):\n",
     "        animal_pos = p[i]\n",
-    "        if i in [0,1,2,3]:\n",
-    "            if animal_pos in roomA:\n",
-    "                while animal_pos != roomA[-1]:\n",
-    "                    animal_pos = (animal_pos[0], animal_pos[1]+1)\n",
-    "                    if animal_pos in p[4:]:\n",
-    "                        condidates_to_move.append(i)\n",
-    "                        break\n",
-    "            else:\n",
-    "                condidates_to_move.append(i)\n",
-    "        elif i in [4,5,6,7]:\n",
-    "            if animal_pos in roomB:\n",
-    "                while animal_pos != roomB[-1]:\n",
-    "                    animal_pos = (animal_pos[0], animal_pos[1]+1)\n",
-    "                    if animal_pos in p[0:4]+p[8:]:\n",
-    "                        condidates_to_move.append(i)\n",
-    "                        break\n",
-    "            else:  \n",
-    "                condidates_to_move.append(i)\n",
-    "        elif i in [8,9,10,11]:\n",
-    "            if animal_pos in roomC:\n",
-    "                while animal_pos != roomC[-1]:\n",
-    "                    animal_pos = (animal_pos[0], animal_pos[1]+1)\n",
-    "                    if animal_pos in p[0:8]+p[12:]:\n",
-    "                        condidates_to_move.append(i)\n",
-    "                        break\n",
-    "            else:\n",
-    "                condidates_to_move.append(i)\n",
-    "        elif i in [12,13,14,15]:\n",
-    "            if animal_pos in roomD:\n",
-    "                while animal_pos != roomD[-1]:\n",
-    "                    animal_pos = (animal_pos[0], animal_pos[1]+1)\n",
-    "                    if animal_pos in p[0:12]:\n",
-    "                        condidates_to_move.append(i)\n",
-    "                        break\n",
-    "            else:\n",
-    "                condidates_to_move.append(i)\n",
-    "            \n",
-    "        \n",
-    "        ## continuar aqui\n",
+    "        # check if animal is in the hall\n",
     "        if animal_pos[1] == 1:\n",
     "            if i in [0,1,2,3]:\n",
     "                objectives = roomA\n",
@@ -326,10 +353,11 @@
     "            elif i in [12,13,14,15]:\n",
     "                objectives = roomD\n",
     "\n",
-    "            for n in range(len(objectives)-1,-1,-1):\n",
+    "            for n in [3,2,1,0]: # objective room from bottom to top\n",
     "                free_position = True\n",
     "                temp = objectives[n]\n",
     "                while temp != objectives[-1]:\n",
+    "                    temp = (temp[0], temp[1]+1)\n",
     "                    if i in [0,1,2,3]:\n",
     "                        if temp in p[4:]:\n",
     "                            free_position = False\n",
@@ -346,7 +374,7 @@
     "                        if temp in p[0:12]:\n",
     "                            free_position = False\n",
     "                            break\n",
-    "                    temp = (temp[0], temp[1]+1)\n",
+    "                    \n",
     "                if not free_position:\n",
     "                    break\n",
     "                steps = bfs(animal_pos, objectives[n])\n",
@@ -364,12 +392,59 @@
     "                    homed = True\n",
     "                    to_check.appendleft((new_p, new_energy, total_steps+steps))\n",
     "                    break\n",
+    "        if homed:\n",
+    "            break\n",
+    "    if homed:\n",
+    "        continue\n",
+    "    for i in range(16):\n",
+    "        animal_pos = p[i]                   \n",
+    "        if i in [0,1,2,3]:\n",
+    "            if animal_pos in roomA:\n",
+    "                while animal_pos != roomA[-1]:\n",
+    "                    animal_pos = (animal_pos[0], animal_pos[1]+1)\n",
+    "                    if animal_pos in p[4:]:\n",
+    "                        condidates_to_move.append(i)\n",
+    "                        break\n",
+    "            else:\n",
+    "                if p[i][1] != 1:\n",
+    "                    condidates_to_move.append(i)\n",
+    "        elif i in [4,5,6,7]:\n",
+    "            if animal_pos in roomB:\n",
+    "                while animal_pos != roomB[-1]:\n",
+    "                    animal_pos = (animal_pos[0], animal_pos[1]+1)\n",
+    "                    if animal_pos in p[0:4]+p[8:]:\n",
+    "                        condidates_to_move.append(i)\n",
+    "                        break\n",
+    "            else:\n",
+    "                if p[i][1] != 1:  \n",
+    "                    condidates_to_move.append(i)\n",
+    "        elif i in [8,9,10,11]:\n",
+    "            if animal_pos in roomC:\n",
+    "                while animal_pos != roomC[-1]:\n",
+    "                    animal_pos = (animal_pos[0], animal_pos[1]+1)\n",
+    "                    if animal_pos in p[0:8]+p[12:]:\n",
+    "                        condidates_to_move.append(i)\n",
+    "                        break\n",
+    "            else:\n",
+    "                if p[i][1] != 1:\n",
+    "                    condidates_to_move.append(i)\n",
+    "        elif i in [12,13,14,15]:\n",
+    "            if animal_pos in roomD:\n",
+    "                while animal_pos != roomD[-1]:\n",
+    "                    animal_pos = (animal_pos[0], animal_pos[1]+1)\n",
+    "                    if animal_pos in p[0:12]:\n",
+    "                        condidates_to_move.append(i)\n",
+    "                        break\n",
+    "            else:\n",
+    "                if p[i][1] != 1:\n",
+    "                    condidates_to_move.append(i)\n",
+    "            \n",
+    "        \n",
     "    if not homed:\n",
     "        for i in condidates_to_move:\n",
     "            animal_pos = p[i]\n",
     "            for pos in hallways:\n",
     "                steps = bfs(animal_pos, pos)\n",
-    "                candidates = []\n",
     "                if steps != -1:\n",
     "                    new_p = p.copy()\n",
     "                    new_p[i] = pos\n",
@@ -388,17 +463,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "63849e44",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "13526"
+       "48708"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,11 +481,19 @@
    "source": [
     "min_energy"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09fd6971",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "jupyterlab",
+   "display_name": "red-electrica",
    "language": "python",
    "name": "python3"
   },
@@ -428,7 +511,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "0203cc3bfc9d7e0b8f87f39f71961d619c76a9641b63e1f8ea02096a657cb8c0"
+    "hash": "480b375f1043213f5c1f0363a14182342a678e76bb2ef498debd342d6015283c"
    }
   }
  },
